Actions
Bug #10308
closedtset: NULL pointer errors
Start date:
2019-01-27
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
tset.c: In function 'main': tset.c:546:13: error: comparison between pointer and integer [-Werror] if (*++p == NULL) ^~ tset.c:563:12: error: comparison between pointer and integer [-Werror] if (*p == NULL) ^~ tset.c:566:28: error: comparison between pointer and integer [-Werror] if (*p == '^' && p[1] != NULL) ^~ tset.c:578:12: error: comparison between pointer and integer [-Werror] if (*p == NULL) ^~ tset.c:581:28: error: comparison between pointer and integer [-Werror] if (*p == '^' && p[1] != NULL) ^~ tset.c:593:12: error: comparison between pointer and integer [-Werror] if (*p == NULL) ^~ tset.c:596:28: error: comparison between pointer and integer [-Werror] if (*p == '^' && p[1] != NULL) ^~ tset.c:628:12: error: comparison between pointer and integer [-Werror] if (*p == NULL) { ^~ tset.c:645:12: error: comparison between pointer and integer [-Werror] if (*p == NULL) { ^~ tset.c:658:6: error: pointers are not permitted as case values case NULL: ^~~~ tset.c:663:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p++ = NULL; ^ tset.c:669:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p++ = NULL; ^ tset.c:674:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p++ = NULL; ^ tset.c:680:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p++ = NULL; ^ tset.c:685:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p++ = NULL; ^ tset.c:705:12: error: comparison between pointer and integer [-Werror] if (*p == NULL) { ^~ tset.c:749:10: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *p-- = NULL; ^ tset.c: In function 'reportek': tset.c:1192:64: error: comparison between pointer and integer [-Werror] if (tgetstr("kb", &bufp) > (char *)0 && n == buf[0] && buf[1] == NULL) ^~ tset.c: In function 'makealias': tset.c:1344:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *a++ = NULL; ^ tset.c:1350:5: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *a = NULL; ^ tset.c: In function 'baudrate': tset.c:1512:9: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] buf[i] = NULL; ^ tset.c: In function 'mapped': tset.c:1532:21: error: comparison between pointer and integer [-Werror] if (*(Map->Ident) == NULL || ^~ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 632cbd96e544a0a21f1a1f7ca071b145f379215d
commit 632cbd96e544a0a21f1a1f7ca071b145f379215d Author: Toomas Soome <tsoome@me.com> Date: 2019-02-04T18:39:10.000Z 10308 tset: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions