usr/src/ucbcmd/tset/tset.c
@@ -4,7 +4,7 @@
  */
 
 /*	Copyright (c) 1984, 1986, 1987, 1988, 1989 AT&T	*/
-/*	  All Rights Reserved  	*/
+/*	  All Rights Reserved	*/
 
 
 /*
@@ -543,7 +543,7 @@ main(int argc, char *argv[])
 	while (--argc >= 0) {
 		p = *++argv;
 		if (*p == '-') {
-			if (*++p == NULL)
+			if (*++p == '\0')
 				Report = YES; /* report current terminal type */
 			else
 				while (*p)
@@ -560,10 +560,10 @@ main(int argc, char *argv[])
 				/* FALLTHROUGH */
 
 			case 'e':	/* erase character */
-				if (*p == NULL)
+				if (*p == '\0')
 					Erase_char = -1;
 				else {
-					if (*p == '^' && p[1] != NULL)
+					if (*p == '^' && p[1] != '\0')
 						if (*++p == '?')
 							Erase_char = '\177';
 						else
@@ -575,10 +575,10 @@ main(int argc, char *argv[])
 				continue;
 
 			case 'i':	/* interrupt character */
-				if (*p == NULL)
+				if (*p == '\0')
 					Intr_char = CNTL('C');
 				else {
-					if (*p == '^' && p[1] != NULL)
+					if (*p == '^' && p[1] != '\0')
 						if (*++p == '?')
 							Intr_char = '\177';
 						else
@@ -590,10 +590,10 @@ main(int argc, char *argv[])
 				continue;
 
 			case 'k':	/* kill character */
-				if (*p == NULL)
+				if (*p == '\0')
 					Kill_char = CNTL('U');
 				else {
-					if (*p == '^' && p[1] != NULL)
+					if (*p == '^' && p[1] != '\0')
 						if (*++p == '?')
 							Kill_char = '\177';
 						else
@@ -625,7 +625,7 @@ main(int argc, char *argv[])
 
 mapold:				Map->Ident = NewType;
 				Map->Test = ALL;
-				if (*p == NULL) {
+				if (*p == '\0') {
 					p = nextarg(argc--, argv++);
 				}
 				Map->Type = p;
@@ -642,7 +642,7 @@ mapold:				Map->Ident = NewType;
 				 * illegal syntax will only produce
 				 * weird results.
 				 */
-				if (*p == NULL) {
+				if (*p == '\0') {
 					p = nextarg(argc--, argv++);
 				}
 				if (isalnum(*p)) {
@@ -655,34 +655,34 @@ mapold:				Map->Ident = NewType;
 				Not = NO;
 				while (!Break)
 					switch (*p) {
-					case NULL:
+					case '\0':
 						p = nextarg(argc--, argv++);
 						continue;
 
 					case ':':	/* mapped type */
-						*p++ = NULL;
+						*p++ = '\0';
 						Break = YES;
 						continue;
 
 					case '>':	/* conditional */
 						Map->Test |= GT;
-						*p++ = NULL;
+						*p++ = '\0';
 						continue;
 
 					case '<':	/* conditional */
 						Map->Test |= LT;
-						*p++ = NULL;
+						*p++ = '\0';
 						continue;
 
 					case '=':	/* conditional */
 					case '@':
 						Map->Test |= EQ;
-						*p++ = NULL;
+						*p++ = '\0';
 						continue;
 
 					case '!':	/* invert conditions */
 						Not = ~Not;
-						*p++ = NULL;
+						*p++ = '\0';
 						continue;
 
 					case 'B':	/* Baud rate */
@@ -702,7 +702,7 @@ mapold:				Map->Ident = NewType;
 				if (Not) {	/* invert sense of test */
 					Map->Test = (~(Map->Test))&ALL;
 				}
-				if (*p == NULL) {
+				if (*p == '\0') {
 					p = nextarg(argc--, argv++);
 				}
 				Map->Type = p;
@@ -746,7 +746,7 @@ mapold:				Map->Ident = NewType;
 				continue;
 
 			default:
-				*p-- = NULL;
+				*p-- = '\0';
 				fatal("Bad flag -", p);
 			}
 		} else {
@@ -1189,7 +1189,7 @@ reportek(char *name, char new, char old, char def)
 	else
 		prs(" set to ");
 	bufp = buf;
-	if (tgetstr("kb", &bufp) > (char *)0 && n == buf[0] && buf[1] == NULL)
+	if (tgetstr("kb", &bufp) > (char *)0 && n == buf[0] && buf[1] == '\0')
 		prs("Backspace\n");
 	else if (n == 0177)
 		prs("Delete\n");
@@ -1341,13 +1341,13 @@ makealias(char *buf)
 	i = 1;
 	while (*b && *b != ':') {
 		if (*b == '|') {
-			*a++ = NULL;
+			*a++ = '\0';
 			Alias[i++] = a;
 			b++;
 		} else
 			*a++ = *b++;
 	}
-	*a = NULL;
+	*a = '\0';
 	Alias[i] = NULL;
 #ifdef	DEB
 	for (i = 0; Alias[i]; printf("A:%s\n", Alias[i++]))
@@ -1403,7 +1403,6 @@ wrtermcap(char *bp)
 		}
 		*p++ = *bp++;
 	}
-/* */
 
 	while (*bp) {
 		switch (*bp) {
@@ -1509,7 +1508,7 @@ baudrate(char *p)
 
 	while (i < 7 && (isalnum(*p) || *p == '.'))
 		buf[i++] = *p++;
-	buf[i] = NULL;
+	buf[i] = '\0';
 	for (i = 0; speeds[i].string; i++)
 		if (sequal(speeds[i].string, buf))
 			return (speeds[i].speed);
@@ -1529,7 +1528,7 @@ char	*type;
 #endif
 	Map = map;
 	while (Map->Ident) {
-		if (*(Map->Ident) == NULL ||
+		if (*(Map->Ident) == '\0' ||
 		    sequal(Map->Ident, type) || isalias(Map->Ident)) {
 			match = NO;
 			switch (Map->Test) {
